js/js.translator/testData/incremental/invalidation/inlineFunctionCircleUsage/main/m.kt
fun box(stepId: Int): String {
    konst x = funA()
    if (x != stepId) {
        return "Fail: $x != $stepId"
    }
    return "OK"
}
